--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Intro to AJAX Practice Tasks</title>
-    <script src="src/index.js" charset="utf-8"></script>
+    <link rel="stylesheet" href="./src/stylesheet.css">
+    <script defer src="src/index.js" charset="utf-8"></script>
   </head>
   <body>
     <h1>Dog CEO</h1>
